--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "content-disposition": "^0.5.4",
     "content-type": "^1.0.5",
     "cookie": "^0.7.1",
+    "cookie-parser": "^1.4.7",
     "cookie-signature": "^1.0.6",
     "core-util-is": "^1.0.3",
     "debug": "^2.6.9",
@@ -50,6 +51,7 @@
     "generate-function": "^2.3.1",
     "get-intrinsic": "^1.3.0",
     "get-proto": "^1.0.1",
+    "google-auth-library": "^9.15.1",
     "gopd": "^1.2.0",
     "has-flag": "^4.0.0",
     "has-symbols": "^1.1.0",
