--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "denque": "^2.1.0",
     "depd": "^2.0.0",
     "destroy": "^1.2.0",
+    "dotenv": "^16.4.7",
     "dunder-proto": "^1.0.1",
     "ee-first": "^1.1.1",
     "ejs": "^3.1.10",
@@ -58,6 +59,7 @@
     "hasown": "^2.0.2",
     "http-errors": "^2.0.0",
     "iconv-lite": "^0.4.24",
+    "imapflow": "^1.0.184",
     "inherits": "^2.0.4",
     "ipaddr.js": "^1.9.1",
     "is-property": "^1.0.2",
@@ -65,6 +67,7 @@
     "long": "^5.3.1",
     "lru-cache": "^7.18.3",
     "lru.min": "^1.1.2",
+    "mailparser": "^3.7.2",
     "marked": "^15.0.7",
     "math-intrinsics": "^1.1.0",
     "media-typer": "^0.3.0",
@@ -81,6 +84,7 @@
     "mysql2": "^3.14.0",
     "named-placeholders": "^1.1.3",
     "negotiator": "^0.6.3",
+    "nodemailer": "^6.10.0",
     "object-assign": "^4.1.1",
     "object-inspect": "^1.13.4",
     "on-finished": "^2.4.1",
